Webet333_Desktop_188 History To Alignment issue resolved

--- a/Code/Webet333.middleware/wwwroot/css/style.css
+++ b/Code/Webet333.middleware/wwwroot/css/style.css
@@ -1824,6 +1824,7 @@ p.slot_game_content{font-size: 13px;color: #212121;padding: 0px 10px;}
 .history-tabs ul.nav-tabs li a{float: left;padding: 5px 10px;display: block;}
 .history-tabs ul.nav-tabs > li > a{border-radius: 5px;}
 .account-reg label.history_sec{font-size: 15px;font-weight: 600;}
+.history_lab_align { margin-top:6px; }
 .input-append  { position:relative; }
 .icondate { position:absolute;top:6px;right:6px;}
 input.input-small {border: 1px solid #cac9c7; /*  box-shadow: 0 0 10px #ddd inset;*/ background-color: #fffffd; border-radius: 5px; padding-right:35px; box-sizing: border-box; width: 100%; height: 35px; }
